--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,14 @@
     transform: rotate(360deg);
   }
 }
+
+
+.studentBox {
+  margin: 10px;
+  display: inline-block;
+  text-align: center;
+}
+
+.btn-primary{
+  margin: 0 20px;
+}
